...
    <string name="send_explanation">You found the social screen! From here you can send coins to your friends and get the ones that they send to you. Just go to
        "Send coins" if you want to send coins to a friend, or click on "Receive coins" if you want to get the coins your friends have sent you.</string>
    <string name="menu_explanation">This is the menu! From here, you can navigate anywhere in the app, just tap on the corresponding button.</string>
    <string name="sendCoins_explanation"> Here you can send coins to your friends! Just choose the coins as you would in the bank, input your friend\'s email and
        send them! You will only be able to send coins to your friends if you have cashed in the 25 daily coins, so make sure to get some gold before coming here!</string>
    <string name="title_activity_see_bought_news">SeeBoughtNews</string>
    <string name="json_test">
{
  "type": "FeatureCollection",
  "date-generated": "Tue Dec 31 2019",
  "time-generated": "00:00",
  "approximate-time-remaining": "23:59",
  "rates": {
...
